--- a/Views/User/ResetPassword.cshtml
+++ b/Views/User/ResetPassword.cshtml
@@ -1,17 +1,16 @@
 ﻿@model PAI_141249.Models.ResetPasswordModel
 
 @{
-    ViewBag.Title = "Reset Password";
+    ViewBag.Title = "Zmiana hasła";
 }
 
-<h2>Reset Password</h2>
+<h2>Zmiana hasła</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>ResetPasswordModel</h4>
         <hr />
 
         <div class="text-danger">
@@ -42,7 +41,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Change" class="btn btn-default" />
+                <input type="submit" value="Zatwierdź" class="btn btn-success" />
             </div>
         </div>
     </div>
