--- a/Views/User/ForgotPassword.cshtml
+++ b/Views/User/ForgotPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "Forgot Password";
+    ViewBag.Title = "Przypomnij hasło";
 }
 
-<h2>Forgot Password</h2>
+<h2>Przypomnij hasło</h2>
 
 @using (Html.BeginForm())
 {
@@ -23,7 +23,7 @@
         </div>
         <div class="form-group">
             <div class="ccl-md-offset-2 col-md-10">
-                <input type="submit" value="Submit" class="btn btn-success" />
+                <input type="submit" value="Potwierdź" class="btn btn-success" />
             </div>
         </div>
     </div>
